<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/membre_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/membres" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/presence_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/presence" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/statistique_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistique" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pageview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>